@@ -1,9 +1,11 @@
 Beta  1.0.3 - 2009-xx-xx
 
-- Addition of test/unit/README with instructions for writing bug/regression tests (Ulf)
+- Addition of test/unit/README with instructions for writing bug/regression
+  tests. (Ulf)
 
 - Experimental support for STLPort. This feature may be removed again at any
-  time later without prior warning! Check cmake -L for configuration instructions (Andrey)
+  time later without prior warning! Check cmake -L for configuration
+  instructions. (Andrey)
 
 - Fixed a bug in MySQL_PreparedResultSet::getString(). Returned string hat real
   data but the length was random. Now, the string is initialized with correct
@@ -27,6 +29,9 @@ Beta  1.0.3 - 2009-xx-xx
 
 - Implemented MySQL_Connection::setSessionVariable() for setting variables like
   sql_mode. (Andrey)
+
+- Implemented MySQL_DatabaseMetaData::getColumnPrivileges(). (Andrey)
+
 
 Alpha  1.0.2 - 2008-12-19
 
